Sun Oct 31 15:40:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * templates/cbx.mpd:
          Just exclude the complete Template_Files folder instead of all files
          individually

Fri Oct 29 11:15:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * templates/cbx.mpd:
          Set the page size to 4096 by default in a debug build

Fri Oct 29 09:17:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * templates/cbx.mpd:
          Exclude template files from build in MinGW and GCC

Thu Oct 28 06:23:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * templates/cbx.mpd:
          Added needed compiler options and generate the needed include paths
          in the bcc32 part, removed generate of $(BCB) includes, these are
          not needed.

Mon Oct 25 12:18:27 2004  Chad Elliott  <elliott_c@ociweb.com>

        * modules/BMakeWorkspaceCreator.pm:
        * modules/NMakeWorkspaceCreator.pm:

          Added the 'generated' target.  This target, which exists in the
          other make based projects, will generate all generated source
          files.

        * templates/automake.mpd:

          Removed unnecessary uses of <%foreach%>.

        * templates/bmake.mpd:

          Corrected the precompiled header support, fixed the pch_postrule
          code and added the 'generated' target.

        * templates/ghs.mpd:

          Changed 'cat' and 'mv -f' to be template variables to better
          support ghs on Windows.

        * templates/make.mpd:

          Force object files to be built in the same directory as the source
          files.  This corresponds to the way dependencies are generated by
          makedepend and depgen.pl.

        * templates/nmake.mpd:

          Moved many targets and variable assignments outside of the
          platform and configurations <%foreach%> sections to avoid
          repetition within the generated makefile.

          Also added the 'generated' target.
